@@ -1,4 +1,7 @@
+package code; 
+
 import java.net.HttpURLConnection;
+
 import java.util.*;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -16,40 +19,90 @@ import java.net.*;
 import java.io.*;
 import java.text.*;
 
-import org.json.JSONException;
-import org.json.JSONObject;
+import java.io.IOException;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.util.concurrent.ExecutionException;
+import java.util.function.Supplier;
 
-public class WeatherData { 
 // key: 0492835dd56389d17aac9f004e9f063b
 
-private static String apiKey = "0492835dd56389d17aac9f004e9f063b";
-private static String baseURL =  "http://api.openweathermap.org/data/2.5/weather?";
+public class WeatherData {
+	
+	private static String apiKey = "0492835dd56389d17aac9f004e9f063b";
+	private static String zipQuery = "zip=";
+    private static String cityNameQuery = "q=";
+	private static String baseURL =  "http://api.openweathermap.org/data/2.5/weather?";
+	private static String apiQuery = "&appid=";
 
-    public JSONObject UsingZipcode(String zipcode) {
-		String url = makingURL(WeatherApi.site, zipcode);
-		return readJsonFromUrl(url);
+	
+	private static String createZipUrl(String zip) {
+		return baseURL + zipQuery + zip + ",US" + apiQuery + apiKey; 
 	}
 
-    private String makingURL(String baseUrl, String zipcode){
-        String URL = baseUrl + "zip=" + zipcode + "?api_key=" + WeatherData.apiKey;
-        return URL;
+    private static String createCityUrl(String city){
+        return baseURL + cityNameQuery + city + apiQuery + apiKey; 
     }
-    
-    public static void main() {
-        // create a client
-    var client = HttpClient.newHttpClient();
+	
+    public static String makeRequest(String zip, boolean hasZipCode) throws IOException, InterruptedException {
 
-    // create a request
-    var request = HttpRequest.newBuilder(
-       URI.create(baseURL + apiKey))
-     .header("accept", "application/json")
-     .build();
+        URL urlForGetRequest; 
+        if(!hasZipCode){
+            urlForGetRequest = new URL(createCityUrl(zip));
+        }else{
+            urlForGetRequest = new URL(createZipUrl(zip));
+        }
+        String readLine = null;
+        HttpURLConnection conection = (HttpURLConnection) urlForGetRequest.openConnection();
+        conection.setRequestMethod("GET");
+        //conection.setRequestProperty("userId", "a1bcdef"); // set userId its a sample here
+        int responseCode = conection.getResponseCode();
 
-    // use the client to send the request
-    var response = client.send(request, new JsonBodyHandler<>(APOD.class));
 
-    // the response:
-        System.out.println(response.body().get().description);
+        if (responseCode == HttpURLConnection.HTTP_OK) {
+            BufferedReader in = new BufferedReader(
+                new InputStreamReader(conection.getInputStream()));
+            StringBuffer response = new StringBuffer();
+            while ((readLine = in .readLine()) != null) {
+                response.append(readLine);
+            } in .close();
+            
+            String responseString = response.toString();
+            
+//            Searching for description in the JSON and added to the response string
+            int start = responseString.indexOf("description") + 14;
+            int end = responseString.indexOf("\"", start);
+            
+            String returnString = responseString.substring(start, end);
+            
+//            Searching for temp_min and adding to response string
+            start = responseString.indexOf("temp_min") + 10;
+            end = responseString.indexOf(",", start);
+            
+            double kelvin_min = Double.parseDouble(responseString.substring(start, end));
+            double fahrenheit_min = ((kelvin_min - 273.15) * (9/5)) + 32;
+  
+            returnString += " with a low of " + (Math.round(fahrenheit_min));
+            
+//          Searching for temp_max and adding to response string
+            start = responseString.indexOf("temp_max") + 10;
+            end = responseString.indexOf(",", start);
+            
+            double kelvin_max = Double.parseDouble(responseString.substring(start, end));
+            double fahrenheit_max = ((kelvin_max - 273.15) * (9/5)) + 32;
+            
+            returnString += " and a high of " + (Math.round(fahrenheit_max) + ". ");
+         
+//            returns the description of weather, the min and the max temperature
+            return returnString;
+
+        } else {
+//        	if get request failed
+            System.out.println("GET NOT WORKED");
+        }
+        return "no response";
     }
 
 }
